Scrapper is Finished
Not bad for never having touched python until 2 days ago XD. Only known bug is mods with <4 secondary stats will crash it.

--- a/SWGoHModManager/DTWorking.html
+++ b/SWGoHModManager/DTWorking.html
@@ -10,7 +10,7 @@
         $('#example').DataTable( {
             iDisplayLength: -1,
             lengthMenu: [[25,50,100,-1],[25,50,100,"All"]],
-            ajax:  "modData.json",
+            ajax:  "seanluc.json",
             columns: [
                 { data: 'Equipped' },
                 { data: 'Slot' },
