--- a/SWGoHModManager/DTWorking.html
+++ b/SWGoHModManager/DTWorking.html
@@ -1,71 +1,70 @@
 <!doctype html>
 <html lang="us">
+<meta charset="utf-8"/>    
 <head>
 <link rel="stylesheet" href="../dataTables/dataTables.1.10.16.min.css">
 <script src="../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js"></script>
 <script src="../dataTables/dataTables.1.10.16.min.js"></script>
 
 <script>
-    $(document).ready(function() {
-        $('#example').DataTable( {
-            iDisplayLength: -1,
-            lengthMenu: [[25,50,100,-1],[25,50,100,"All"]],
-            ajax:  "seanluc.json",
-            columns: [
-                { data: 'Equipped' },
-                { data: 'Slot' },
-                { data: 'Set' },
-                { data: 'Primary' },
-                { data: 'Spd',
-                "defaultContent": "" },
-                { data: 'Crit_%',
-                "defaultContent": "" },
-                { data: 'Off',
-                "defaultContent": "" },
-                { data: 'Off_%',
-                "defaultContent": "" },
-                { data: 'Prot',
-                "defaultContent": "" },
-                { data: 'Prot_%',
-                "defaultContent": "" },
-                { data: 'HP',
-                "defaultContent": "" },
-                { data: 'HP_%',
-                "defaultContent": "" },
-                { data: 'Def',
-                "defaultContent": "" },
-                { data: 'Def_%',
-                "defaultContent": "" },
-                { data: 'Pot_%',
-                "defaultContent": "" },
-                { data: 'Ten_%',
-                "defaultContent": "" }
-            ]
-        });
+$(document).ready(function() {
+    $('#example').DataTable( {
+        iDisplayLength: -1,
+        lengthMenu: [[25,50,100,-1],[25,50,100,"All"]],
+        ajax:  "Sert.json",
+        columns: [
+            { data: 'Equipped' },
+            { data: 'Slot' },
+            { data: 'Set' },
+            { data: 'Primary' },
+            { data: 'Spd',
+            "defaultContent": "" },
+            { data: 'Crit_%',
+            "defaultContent": "" },
+            { data: 'Off',
+            "defaultContent": "" },
+            { data: 'Off_%',
+            "defaultContent": "" },
+            { data: 'Prot',
+            "defaultContent": "" },
+            { data: 'Prot_%',
+            "defaultContent": "" },
+            { data: 'HP',
+            "defaultContent": "" },
+            { data: 'HP_%',
+            "defaultContent": "" },
+            { data: 'Def',
+            "defaultContent": "" },
+            { data: 'Def_%',
+            "defaultContent": "" },
+            { data: 'Pot_%',
+            "defaultContent": "" },
+            { data: 'Ten_%',
+            "defaultContent": "" }
+        ]
+    });
 
-        // Setup - add a text input to each footer cell
-        $('#example tfoot th').each( function () {
-            var title = $(this).text();
-            $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
-        } );
-
-        // Apply the search
-     //   this.columns().every( function () {
-     //   var that = this;
- 
-        //$( 'input', this.footer() ).on( 'keyup change', function () {
-            //if ( that.search() !== this.value ) {
-                //that
-                    //.search( this.value )
-                    //.draw();
-            //}
-        //} );
-
-
+    // Setup - add a text input to each footer cell
+    $('#example tfoot th').each( function () {
+        var title = $(this).text();
+        $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
     } );
-    
-</script>
 
+    // Apply the search
+    //   this.columns().every( function () {
+    //   var that = this;
+
+    //$( 'input', this.footer() ).on( 'keyup change', function () {
+        //if ( that.search() !== this.value ) {
+            //that
+                //.search( this.value )
+                //.draw();
+        //}
+    //} );
+
+
+})
+</script>
 </head>
 <!-- only using values in the json for headers -->
 <body>
