The Four Searchman
Finally got the search on first 4 columns working, cleaned up the datatable and added the 4 tables for mod assignment. After they're clean it's time for drag/drop for rows on top to bottom tables.

--- a/SWGoHModManager/extractDTtoJs.html
+++ b/SWGoHModManager/extractDTtoJs.html
@@ -12,7 +12,7 @@
 <!-- only using values in the json for headers -->
 <body>
 <div class="container">
-<table id="moddata" class="display" cellspacing="0" width="100%">
+    <table id="moddata" class="display">
         <thead>
             <tr>
                 <th>Equipped</th>
@@ -20,17 +20,17 @@
                 <th>Set</th>
                 <th>Primary</th>
                 <th>Spd</th>
-                <th>Crit_%</th>
+                <th>Crit%</th>
                 <th>Off</th>
-                <th>Off_%</th>
+                <th>Off%</th>
                 <th>Prot</th>
-                <th>Prot_%</th>
+                <th>Prot%</th>
                 <th>HP</th>
-                <th>HP_%</th>
+                <th>HP%</th>
                 <th>Def</th>
-                <th>Def_%</th>
-                <th>Pot_%</th>
-                <th>Ten_%</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
             </tr>
         </thead>
         <tfoot>
@@ -53,6 +53,126 @@
                 <th></th>
             </tr>
         </tfoot>
+    </table>
+</div>
+<div class="container">
+<table id="squad1" class="display assigned" cellspacing="0" width="100%">
+    <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="container">
+    <table id="squad2" class="display assigned" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="container">
+    <table id="squad3" class="display assigned" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="container">
+    <table id="squad4" class="display assigned" width="100%">
+        <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="container">
+    <table id="squad5" class="display assigned" width="100%">
+        <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+            </tr>
+        </thead>
     </table>
 </div>
 </body>
