--- a/SWGoHModManager/useJSforTableRender.html
+++ b/SWGoHModManager/useJSforTableRender.html
@@ -1,19 +1,20 @@
 <!doctype html>
-<html lang="us">
-<meta charset="utf-8"/>
+<html lang='us'>
+<meta charset='utf-8'/>
 <head>
-<link rel="stylesheet" href="../dataTables/dataTables.1.10.16.min.css">
-<link rel="stylesheet" href="../CSS/moddataStyles.css">
-<script src="../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js"></script>
-<script src="../dataTables/dataTables.1.10.16.min.js"></script>
-<script async src="../Scripts/modDataTable.js"></script>
-<script src="../Scripts/assignmentTables.js"></script>
+<link rel='stylesheet' href='../dataTables/dataTables.1.10.16.min.css'>
+<link rel='stylesheet' href='../CSS/moddataStyles.css'>
+<script src='../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
+<script src='../dataTables/dataTables.1.10.16.min.js'></script>
+<script async src='../Scripts/modDataTable.js'></script>
+<script async src='../Scripts/assignmentTables.js'></script>
 </head>
 
 <!-- only using values in the json for headers -->
 <body>
-<div id="squadMembr0" class="container">
-    <table id="moddata" class="display">
+<div></div>
+<div id='dataTable' class='container'>
+    <table id='moddata' class='display'>
         <thead>
             <tr>
                 <th>Equipped</th>
@@ -56,125 +57,10 @@
         </tfoot>
     </table>
 </div>
-<div id="squadMembr1" class=container>
-<table id="squad1" class="display assigned" cellspacing="0" width="100%">
-    <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-            </tr>
-        </thead>
-    </table>
-</div>
-<div id="squadMembr2" class="container">
-    <table id="squad2" class="display assigned" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-            </tr>
-        </thead>
-    </table>
-</div>
-<div id="squadMembr3" class="container">
-    <table id="squad3" class="display assigned" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-            </tr>
-        </thead>
-    </table>
-</div>
-<div id="squadMembr4" class="container">
-    <table id="squad4" class="display assigned" width="100%">
-        <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-            </tr>
-        </thead>
-    </table>
-</div>
-<div class="container">
-    <table id="squad5" class="display assigned">
-        <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-            </tr>
-        </thead>
-    </table>
-</div>
+<div id='squadMembr0' class='container2'></div>
+<div id='squadMembr1' class='container2'></div>
+<div id='squadMembr2' class='container2'></div>
+<div id='squadMembr3' class='container2'></div>
+<div id='squadMembr4' class='container2'></div>
 </body>
 </html>
