--- a/SWGoHModManager/useJSforTableRender.html
+++ b/SWGoHModManager/useJSforTableRender.html
@@ -2,17 +2,17 @@
 <html lang='us'>
 <meta charset='utf-8'/>
 <head>
-<link rel='stylesheet' href='../dataTables/dataTables.1.10.16.min.css'>
+<link rel='stylesheet' href='../Scripts/dataTables/dataTables.1.10.16.min.css'>
 <link rel='stylesheet' href='../CSS/moddataStyles.css'>
 <script src='../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
-<script src='../dataTables/dataTables.1.10.16.min.js'></script>
+<script src='../Scripts/dataTables/dataTables.1.10.16.min.js'></script>
+<script src='../Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
 <script async src='../Scripts/modDataTable.js'></script>
-<script async src='../Scripts/assignmentTables.js'></script>
+<script async src='../Scripts/tblBuilder2.js'></script>
 </head>
 
 <!-- only using values in the json for headers -->
 <body>
-<div></div>
 <div id='dataTable' class='container'>
     <table id='moddata' class='display'>
         <thead>
@@ -63,4 +63,5 @@
 <div id='squadMembr3' class='container2'></div>
 <div id='squadMembr4' class='container2'></div>
 </body>
+<!--Extra ModSet column in json, when name is selected find and clear all mods with same modset, then assign all mods with autocomplete selected name the set number for the appropriate table. For datatable, include column but hide it? Then find out to change row color based on modset # -->
 </html>
