--- a/SWGoHModManager/DTWorking.html
+++ b/SWGoHModManager/DTWorking.html
@@ -2,16 +2,16 @@
 <html lang="us">
 <meta charset="utf-8"/>    
 <head>
-<link rel="stylesheet" href="../dataTables/dataTables.1.10.16.min.css">
+<link rel="stylesheet" href="../Scripts/dataTables/dataTables.1.10.16.min.css">
 <script src="../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js"></script>
-<script src="../dataTables/dataTables.1.10.16.min.js"></script>
+<script src="../Scripts/dataTables/dataTables.1.10.16.min.js"></script>
 
 <script>
 $(document).ready(function() {
     $('#example').DataTable( {
         iDisplayLength: -1,
         lengthMenu: [[25,50,100,-1],[25,50,100,"All"]],
-        ajax:  "Sert.json",
+        ajax:  "AcctData/sert.json",
         columns: [
             { data: 'Equipped' },
             { data: 'Slot' },
