--- a/SWGoHModManager/extractDTtoJs.html
+++ b/SWGoHModManager/extractDTtoJs.html
@@ -2,10 +2,10 @@
 <html lang="us">
 <meta charset="utf-8"/>
 <head>
-<link rel="stylesheet" href="../dataTables/dataTables.1.10.16.min.css">
+<link rel="stylesheet" href="../Scripts/dataTables/dataTables.1.10.16.min.css">
 <link rel="stylesheet" href="../CSS/moddataStyles.css">
 <script src="../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js"></script>
-<script src="../dataTables/dataTables.1.10.16.min.js"></script>
+<script src="../Scripts/dataTables/dataTables.1.10.16.min.js"></script>
 <script src="../Scripts/modDataTable.js"></script>
 </head>
 
