--- a/SWGoHModManager/addSearchButton.html
+++ b/SWGoHModManager/addSearchButton.html
@@ -9,7 +9,7 @@
 <script src='../Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
 <script async src='../Scripts/modDataTableOnClick.js'></script>
 <script async src='../Scripts/tblBuilder2.js'></script>
-<script src='../Scripts/dataCollection.js'></script>
+<script async src='../Scripts/dataCollection.js'></script>
 </head>
 <!-- only using values in the json for headers -->
 <body>
