--- a/SWGoHModManager/addSearchButton.html
+++ b/SWGoHModManager/addSearchButton.html
@@ -16,6 +16,7 @@
 <div>
 <div class='btnholdr'>
     <div><input type=text><input type=button value="Submit" id=srchBtn></div>
+    <div><input type=text><input type=button value="Submit" id=refrshJSON></div>
 </div>
 <div id='dataTable' class='dtWrap'>
     <table id='moddata' class='display'>
