Trying to figure out flask, may need to load html as a template

--- a/SWGoHModManager/addSearchButton.html
+++ b/SWGoHModManager/addSearchButton.html
@@ -15,7 +15,7 @@
 <body>
 <div>
 <div class='btnholdr'>
-    <div><input type=text><input type=button value="Submit" id=srchBtn></div>
+    <form method="POST" action="/AcctData/modscraper"><input  name='srchstring' type=text autofocus><input type=button value="Submit" id=srchBtn></form>
     <div><input type=text><input type=button value="Submit" id=refrshJSON></div>
 </div>
 <div id='dataTable' class='dtWrap'>
