--- a/SWGoHModManager/DragnDrop.html
+++ b/SWGoHModManager/DragnDrop.html
@@ -8,7 +8,7 @@
 <script src='../Scripts/dataTables/dataTables.1.10.16.min.js'></script>
 <script src='../Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
 <script async src='../Scripts/modDataTableOnClick.js'></script>
-<script async src='../Scripts/tblBuilder2.js'></script>
+<script async src='../Scripts/tblBuilder3.js'></script>
 <script async src='../Scripts/dataCollection.js'></script>
 </head>
 <!-- only using values in the json for headers -->
@@ -70,6 +70,7 @@
 <div id='squadMembr2' class='container2'></div>
 <div id='squadMembr3' class='container2'></div>
 <div id='squadMembr4' class='container2'></div>
+<div id='dragging'>Drag me!</div>
 </body>
 <!--Extra ModSet column in json, when name is selected find and clear all mods with same modset, then assign all mods with autocomplete selected name the set number for the appropriate table. For datatable, include column but hide it? Then find out to change row color based on modset # -->
 </html>
