--- a/SWGoHModManager/btnsForAssignment.html
+++ b/SWGoHModManager/btnsForAssignment.html
@@ -13,11 +13,13 @@
 </head>
 <!-- only using values in the json for headers -->
 <body>
-<div>
+
 <div class='btnholdr'>
     <input  name='srchstring' type=text autofocus><input type=button value="Submit" id=srchBtn>
-    <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>
+    <!--
+    <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
 </div>
+<div>
 <div id='dataTable' class='dtWrap'>
     <table id='moddata' class='display'>
         <thead>
