--- a/SWGoHModManager/btnsForAssignment.html
+++ b/SWGoHModManager/btnsForAssignment.html
@@ -15,7 +15,10 @@
 <body>
 
 <div class='btnholdr'>
-    <input  name='srchstring' type=text autofocus><input type=button value="Submit" id=srchBtn>
+    <input  name='srchstring' type=text placeholder='swgoh.gg/u/<username>' autofocus><input type=button value="Submit" id=srchBtn>
+    <div style='padding-bottom:10px'>Enter your name as it appears on swgoh.gg and hit submit.</div>
+    <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
+    <div>Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <!--
     <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
 </div>
