--- a/SWGoHModManager/index.html
+++ b/SWGoHModManager/index.html
@@ -7,13 +7,23 @@
 <script src='../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
 <script src='../Scripts/dataTables/dataTables.1.10.16.min.js'></script>
 <script src='../Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
-<script async src='../Scripts/modDataTable.js'></script>
-<script async src='../Scripts/tblBuilder2.js'></script>
+<script async src='../Scripts/modDataTableOnClick.js'></script>
+<script async src='../Scripts/tblBuilder.js'></script>
+<script async src='../Scripts/dataCollection.js'></script>
 </head>
-
 <!-- only using values in the json for headers -->
 <body>
-<div id='dataTable' class='container'>
+
+<div class='btnholdr'>
+    <input  name='srchstring' type=text placeholder='swgoh.gg/u/<username>' autofocus><input type=button value="Submit" id=srchBtn>
+    <div style='padding-bottom:10px'>Enter your name as it appears on swgoh.gg and hit submit.</div>
+    <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
+    <div>Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
+    <!--
+    <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
+</div>
+<div>
+<div id='dataTable' class='dtWrap'>
     <table id='moddata' class='display'>
         <thead>
             <tr>
@@ -33,6 +43,7 @@
                 <th>Def%</th>
                 <th>Pot%</th>
                 <th>Ten%</th>
+                <th>Assigned</th>
             </tr>
         </thead>
         <tfoot>
@@ -53,10 +64,22 @@
                 <th></th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </tfoot>
     </table>
 </div>
+<div class='assignBtnWrap'>
+<form>
+    <div class='assgnBtn1'><input name='modset' type=radio value=0></div>
+    <div class='assgnBtn2'><input name='modset' type=radio value=1></div>
+    <div class='assgnBtn3'><input name='modset' type=radio value=2></div>
+    <div class='assgnBtn4'><input name='modset' type=radio value=3></div>
+    <div class='assgnBtn5'><input name='modset' type=radio value=4></div>
+</form>
+</div>
+</div>
+
 <div id='squadMembr0' class='container2'></div>
 <div id='squadMembr1' class='container2'></div>
 <div id='squadMembr2' class='container2'></div>
