--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang='us'>
 <meta charset='utf-8'/>
 <head>
-<link rel='stylesheet' href='../Scripts/dataTables/dataTables.1.10.16.min.css'>
-<link rel='stylesheet' href='../CSS/moddataStyles.css'>
-<script src='../Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
-<script src='../Scripts/dataTables/dataTables.1.10.16.min.js'></script>
-<script src='../Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
-<script async src='../Scripts/modDataTableOnClick.js'></script>
-<script async src='../Scripts/tblBuilder.js'></script>
-<script async src='../Scripts/dataCollection.js'></script>
+<link rel='stylesheet' href='Scripts/dataTables/dataTables.1.10.16.min.css'>
+<link rel='stylesheet' href='CSS/moddataStyles.css'>
+<script src='Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
+<script src='Scripts/dataTables/dataTables.1.10.16.min.js'></script>
+<script src='Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
+<script async src='Scripts/modDataTableOnClick.js'></script>
+<script async src='Scripts/tblBuilder.js'></script>
+<script async src='Scripts/dataCollection.js'></script>
 </head>
 <!-- only using values in the json for headers -->
 <body>
