--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 <script src='Scripts/dataTables/dataTables.1.10.16.min.js'></script>
 <script src='Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
 <script async src='Scripts/modDataTableOnClick.js'></script>
-<script async src='Scripts/tblBuilder.js'></script>
+<script async src='Scripts/tblBuilder2.js'></script>
 <script async src='Scripts/dataCollection.js'></script>
 </head>
 <!-- only using values in the json for headers -->
 <body>
 
 <div class='btnholdr'>
-    <input  name='srchstring' type=text placeholder='swgoh.gg/u/<username>' autofocus><input type=button value="Submit" id=srchBtn>
+    <form id='srchForm'>
+    <input  id='srchString' type=text placeholder='swgoh.gg/u/<username>' autofocus><input type='submit' value='Submit' id='srchBtn'>
+    </form>
     <div style='padding-bottom:10px'>Enter your name as it appears on swgoh.gg and hit submit.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
     <div>Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
