--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>Collapse button to hide colored tables</li>
         <li>Ability to save changes</li>
         <li>Add a character max stats row, and add to totals calculation</li>
+        <li>Ability to resize tables</li>
     </div>
     
     <!--
