--- a/index.html
+++ b/index.html
@@ -35,52 +35,52 @@
     <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
 </div>
 <div>
-    <div id='dataTable' class='dtWrap'>
-        <table id='moddata' class='display'>
-            <thead>
-                <tr>
-                    <th>Equipped</th>
-                    <th>Slot</th>
-                    <th>Set</th>
-                    <th>Primary</th>
-                    <th>Spd</th>
-                    <th>Crit%</th>
-                    <th>Off</th>
-                    <th>Off%</th>
-                    <th>Prot</th>
-                    <th>Prot%</th>
-                    <th>HP</th>
-                    <th>HP%</th>
-                    <th>Def</th>
-                    <th>Def%</th>
-                    <th>Pot%</th>
-                    <th>Ten%</th>
-                    <th>Assigned</th>
-                </tr>
-            </thead>
-            <tfoot>
-                <tr>
-                    <th><srch>Equipped</srch></th>
-                    <th><srch>Slot</srch></th>
-                    <th><srch>Set</srch></th>
-                    <th><srch>Primary</srch></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
+<div id='dataTable' class='dtWrap'>
+    <table id='moddata' class='display'>
+        <thead>
+            <tr>
+                <th>Equipped</th>
+                <th>Slot</th>
+                <th>Set</th>
+                <th>Primary</th>
+                <th>Spd</th>
+                <th>Crit%</th>
+                <th>Off</th>
+                <th>Off%</th>
+                <th>Prot</th>
+                <th>Prot%</th>
+                <th>HP</th>
+                <th>HP%</th>
+                <th>Def</th>
+                <th>Def%</th>
+                <th>Pot%</th>
+                <th>Ten%</th>
+                <th>Assigned</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th><srch>Equipped</srch></th>
+                <th><srch>Slot</srch></th>
+                <th><srch>Set</srch></th>
+                <th><srch>Primary</srch></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
     <div class='assignBtnWrap'>
         <form>
             <div class='assgnBtn1'><input name='modset' type=radio value=0></div>
@@ -90,12 +90,13 @@
             <div class='assgnBtn5'><input name='modset' type=radio value=4></div>
         </form>
     </div>
-    <div style='clear:left'></div>
 </div>
+<div style='float:left'>
 <div id='squadMembr0' class='colorTblWrap'></div>
 <div id='squadMembr1' class='colorTblWrap'></div>
 <div id='squadMembr2' class='colorTblWrap'></div>
 <div id='squadMembr3' class='colorTblWrap'></div>
 <div id='squadMembr4' class='colorTblWrap'></div>
+</div>
 </body>
 </html>
