If it's not one thing it's another
view correction broke auto complete, hopefully now both are working for all views.

--- a/index.html
+++ b/index.html
@@ -34,53 +34,53 @@
     <!--
     <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
 </div>
-<div>
-<div id='dataTable' class='dtWrap'>
-    <table id='moddata' class='display'>
-        <thead>
-            <tr>
-                <th>Equipped</th>
-                <th>Slot</th>
-                <th>Set</th>
-                <th>Primary</th>
-                <th>Spd</th>
-                <th>Crit%</th>
-                <th>Off</th>
-                <th>Off%</th>
-                <th>Prot</th>
-                <th>Prot%</th>
-                <th>HP</th>
-                <th>HP%</th>
-                <th>Def</th>
-                <th>Def%</th>
-                <th>Pot%</th>
-                <th>Ten%</th>
-                <th>Assigned</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th><srch>Equipped</srch></th>
-                <th><srch>Slot</srch></th>
-                <th><srch>Set</srch></th>
-                <th><srch>Primary</srch></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+<div style='float:left'>
+    <div id='dataTable' class='dtWrap'>
+        <table id='moddata' class='display'>
+            <thead>
+                <tr>
+                    <th>Equipped</th>
+                    <th>Slot</th>
+                    <th>Set</th>
+                    <th>Primary</th>
+                    <th>Spd</th>
+                    <th>Crit%</th>
+                    <th>Off</th>
+                    <th>Off%</th>
+                    <th>Prot</th>
+                    <th>Prot%</th>
+                    <th>HP</th>
+                    <th>HP%</th>
+                    <th>Def</th>
+                    <th>Def%</th>
+                    <th>Pot%</th>
+                    <th>Ten%</th>
+                    <th>Assigned</th>
+                </tr>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th><srch>Equipped</srch></th>
+                    <th><srch>Slot</srch></th>
+                    <th><srch>Set</srch></th>
+                    <th><srch>Primary</srch></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
     <div class='assignBtnWrap'>
         <form>
             <div class='assgnBtn1'><input name='modset' type=radio value=0></div>
@@ -92,11 +92,11 @@
     </div>
 </div>
 <div style='float:left'>
-<div id='squadMembr0' class='colorTblWrap'></div>
-<div id='squadMembr1' class='colorTblWrap'></div>
-<div id='squadMembr2' class='colorTblWrap'></div>
-<div id='squadMembr3' class='colorTblWrap'></div>
-<div id='squadMembr4' class='colorTblWrap'></div>
+    <div id='squadMembr0' class='colorTblWrap'></div>
+    <div id='squadMembr1' class='colorTblWrap'></div>
+    <div id='squadMembr2' class='colorTblWrap'></div>
+    <div id='squadMembr3' class='colorTblWrap'></div>
+    <div id='squadMembr4' class='colorTblWrap'></div>
 </div>
 </body>
 </html>
