--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <div>
         <b>Things to Come:</b>
+        <li>Compatibility with iOS devices, sorry Apple users</li>
         <li>Totals row for colored tables</li>
         <li>Ability to save changes</li>
         <li>Add a character max stats row, and add to totals calculation</li>
