--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <div class='userInput'>
     <form id='srchForm'>
-    <input  id='srchString' type=text placeholder='swgoh.gg/u/<username>' autofocus><input type='submit' value='Submit' id='srchBtn'>
+    <input  id='srchString' type=text placeholder='Enter username' autofocus><input type='submit' value='Submit' id='srchBtn'>
     </form>
-    <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b> Enter your username as it appears on swgoh.gg and hit submit.</div>
+    <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b> swgoh.gg/u/"username" <br>Enter your username as it appears on swgoh.gg and hit submit.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
     <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <div>
