Collected Data for Force

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div>
         <b>Things to Come:</b>
         <li>Compatibility with mobile iOS devices & Safari, sorry Apple users</li>
+        <li>Changing search for <i>Slot & Set</i> to a clickable filter for comparisons</li>
         <li>Ability to save changes</li>
         <li>Add a character max stats row, and add to totals calculation</li>
         <br><b>Right now primary stats aren't included in totals, please let me know if you think this would be helpful. The main reason is that I don't know what the * value for the mod is, so I can only ever assume it's a 5* mod atm.</b>
