--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </form>
     <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b> swgoh.gg/u/"username" <br>Enter your username as it appears on swgoh.gg and hit submit.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
-    <div style='padding-bottom:10px'><b>Searching:</b> Multi search is available by using the pipe symbol, shift+\ = |, between each term. <b>e.g.</b> In <i>Slot</i> search type <b>Arrow|Diamond</b> to display both terms in the list</div>
+    <div style='padding-bottom:10px'><b>Searching:</b> Multi search is available by using the pipe symbol, shift+\ = |, between each term. <b>e.g.</b> In <i>Slot</i> search type <b>Arrow|Diamond</b> to display both terms in the list.</div>
     <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. <b>e.g.</b> Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <div>
         <b>Things to Come:</b>
