--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <li>Ability to save changes</li>
         <li>Add a character max stats row, and add to totals calculation</li>
     </div>
+    <div>
+        <b>Bugs:</b>
+        <li>Seems that at times row selection doesn't keep your scroll position after filtering with a search.</li>
+    </div>
     
     <!--
     <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
