--- a/docRdy.html
+++ b/docRdy.html
@@ -9,6 +9,7 @@
 <script src='Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
 <script async src='Scripts/swgoh.win.js'></script>
 </head>
+<!-- only using values in the json for headers -->
 <body>
 
 <div class='userInput'>
@@ -17,17 +18,13 @@
     </form>
     <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b> swgoh.gg/u/"username" <br>Enter your username as it appears on swgoh.gg and hit submit.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
-    <div style='padding-bottom:10px'><b>Searching:</b> Multi search is available by using the pipe symbol, shift+\ = |, between each term. <b>e.g.</b> In <i>Slot</i> search type <b>Arrow|Diamond</b> to display both terms in the list.</div>
-    <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. <b>e.g.</b> Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
+    <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. e.g. Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <div>
         <b>Things to Come:</b>
         <li>Compatibility with iOS devices & Safari, sorry Apple users</li>
         <li>Ability to save changes</li>
         <li>Add a character max stats row, and add to totals calculation</li>
-    </div>
-    <div>
-        <b>Bugs:</b>
-        <li>Seems that at times row selection doesn't keep your scroll position after filtering with a search.</li>
+        <br><b>Right now primary stats aren't included in totals, please let me know if you think this would be helpful. The main reason is that I don't know what the * value for the mod is, so I can only ever assume it's a 5* mod atm.</b>
     </div>
     
     <!--
@@ -35,7 +32,6 @@
 </div>
 <div style='float:left'>
     <div id='dataTable' class='dtWrap'>
-        <!-- only using values in the json for headers -->
         <table id='moddata' class='display'>
             <thead>
                 <tr>
