--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <meta charset='utf-8'/>
 <head>
 <link rel='stylesheet' href='Scripts/dataTables/dataTables.1.10.16.min.css'>
-<link rel='stylesheet' href='CSS/moddataStyles.css'>
+<link rel='stylesheet' href='CSS/moddataStyles.min.css'>
 <script src='Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
 <script src='Scripts/dataTables/dataTables.1.10.16.min.js'></script>
-<script src='Scripts/jquery-ui-1.12.1/jquery-ui.js'></script>
-<script async src='Scripts/swgoh.win.js'></script>
+<script src='Scripts/jquery-ui-1.12.1/jquery-ui.min.js'></script>
+<script async src='Scripts/swgoh.win.min.js'></script>
 </head>
 <body>
 
