--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <script src='Scripts/jquery-ui-1.12.1/jquery-1.12.4.js'></script>
 <script src='Scripts/dataTables/dataTables.1.10.16.min.js'></script>
 <script src='Scripts/jquery-ui-1.12.1/jquery-ui.min.js'></script>
-<script async src='Scripts/swgoh.win.js'></script>
+<script async src='Scripts/swgoh.win.min.js'></script>
 </head>
 <body>
 
 <div class='userInput'>
     <form id='srchForm'>
-    <input  id='srchString' type=text placeholder='Enter username' autofocus><input type='submit' value='Submit' id='srchBtn'>
+    <input  id='srchString' name='playerID' type=text placeholder='Enter username' autofocus><input type='submit' value='Submit' id='srchBtn'>
     </form>
     <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b> swgoh.gg/u/"username" <br>Enter your username as it appears on swgoh.gg and hit submit.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
@@ -21,9 +21,7 @@
     <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. <b>e.g.</b> Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
     <div>
         <b>Things to Come:</b>
-        <li>Compatibility with iOS devices & Safari, sorry Apple users</li>
         <li>Ability to save changes</li>
-        <li>Add a character max stats row, and add to totals calculation</li>
     </div>    
     <!--
     <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
