--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 <script src='Scripts/jquery-ui-1.12.1/jquery-ui.min.js'></script>
 <script async src='Scripts/swgoh.win.js'></script>
 </head>
-<body>
 
+<body>
 <div class='userInput'>
     <form id='srchForm'>
-    <input  id='srchString' name='player' type=text placeholder='Enter username' autofocus><input type='submit' value='Submit' id='srchBtn'>
+        <input  id='searchStr' name='player' type=text size=14 placeholder='Enter Ally Code' autofocus><input type='submit' value='Submit' id='srchBtn'>
     </form>
-    <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b><br>Enter your 9 digit "Ally code"<br>It can be found at the bottom of your player screen in game.</div>
+    <div style='padding-bottom:10px; padding-top:10px'><b>Instructions:</b><br>
+        Enter your 9 digit "Ally code"<br>
+        It can be found at the bottom of your player screen in game.</div>
     <div style='padding-bottom:10px'>To assign a mod to a table select a colored radio button and then click on the row for the mod you want to assign.</div>
-    <div style='padding-bottom:10px'><b>Searching:</b> Multi search is available by using the pipe symbol, shift+\ = |, between each term. <b>e.g.</b> In <i>Slot</i> search type <b>Arrow|Diamond</b> to display both terms in the list.</div>
-    <div style='padding-bottom:10px'><b>Sorting:</b> Click a column header to sort by that value, click a second header for secondary sorting. <b>e.g.</b> Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
-    <div>
-        <b>Things to Come:</b>
-        <li>Ability to save changes</li>
-    </div>    
-    <!--
-    <form method="POST" action="/AcctData/modscraper4.py"><input type=text name=refreshJSON><input type=button value="Submit"></form>-->
+    <div style='padding-bottom:10px'><b>Filtering:</b><br>Multi-Filter is available by using the pipe symbol "|", hold Shift & \ for |, between each term. <b>e.g.</b> In <i>Slot</i> search type <b>Arrow|Diamond</b> to display both terms in the list.</div>
+    <div style='padding-bottom:10px'><b>Sorting:</b><br>Click a column header to sort by that value, click a second header for secondary sorting. <b>e.g.</b> Click <i>Spd</i> twice followed by <i>Slot</i> to find your fastest mods by slot.</div>
+    <form id='updateForm'>
+        <b>Update Data:</b><br>
+        <input  id='updateStr' name='player' type=text size=14 placeholder='Enter Ally Code' autofocus><input type='submit' value='Submit' id='srchBtn'>
+    </form>
+   
 </div>
 <div style='float:left'>
     <div id='dataTable' class='dtWrap'>
