Fixed duplicate btn & update msg

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div style='padding-bottom:10px'>To find all mods equipped by a character type their name in the <i>Squad Member</i> search box. Then select the correct drop down option.</div>
     <form id='updateForm'>
         <b>Update Data:</b><br>
-        <input  id='updateStr' name='player' type=text size=19 placeholder='Enter Ally Code' autofocus><input type='submit' value='Submit' id='srchBtn'>
+        <input  id='updateStr' name='player' type=text size=19 placeholder='Enter Ally Code' autofocus><input type='submit' value='Submit' id='updtBtn'>
     </form>
    
 </div>
